# rexpect

./: Cargo.toml
examples/: bash.rs  bash_read.rs  exit_code.rs  ftp.rs  repl.rs
src/: command.rs  lib.rs  process.rs  reader.rs  session.rs
src/unix/: mod.rs  process.rs
src/windows/: command.rs  mod.rs  pipe.rs  process.rs
