[package]
description = "Interact with unix processes/bash the same way as pexpect or Don libes expect does"
name        = "rexpect"
version     = "0.4.0"
authors     = ["Philipp Keller <philipp.keller@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/philippkeller/rexpect"
homepage    = "https://github.com/philippkeller/rexpect"
license     = "MIT"
categories  = ["os::unix-apis"]
keywords    = ["pty", "automation", "testing", "expect", "pexpect"]
readme      = "README.md"



[dependencies]
regex = "1.3"
error-chain = "0.12"
tempfile = "3" # Needed on Windows?


[target.'cfg(unix)'.dependencies]
nix = "0.17"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "namedpipeapi"] }

[badges]
travis-ci = { repository = "philippkeller/rexpect" }